<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbg">

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="740dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="ExtraText">


        <!-- Title (Login) -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:text="@string/Create_new_account"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <!-- Username Field -->

        <EditText
            android:id="@+id/name_Input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/roundcorner"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="13dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/nameChecker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/write_uniue_name"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            />



        <EditText
            android:id="@+id/email_Input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundcorner"
            android:hint="@string/email"
            android:inputType="text"
            android:padding="13dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/age_Input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundcorner"
            android:hint="@string/Age"
            android:inputType="text"
            android:padding="13dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundcorner"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="13dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />


        <!-- Login Button -->
        <Button
            android:id="@+id/btnSign"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/white"
            android:padding="12dp"
            android:text="@string/signup"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <!-- Login Button -->
        <Button
            android:id="@+id/logpage"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/white"
            android:padding="12dp"
            android:text="@string/click_here_to_loginup"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>
