<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbg"
    tools:context=".MainActivity">

    <!-- First LinearLayout for icons and text -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/youtube" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/youtube"
            android:layout_marginStart="5dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/user_Image_section"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="-80dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/barsearch"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="170dp"
            android:layout_marginTop="15dp"
            android:text="@string/channel"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
           />



    </LinearLayout>



    <TextView
        android:id="@+id/user_profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="190dp"
        />

    <TextView
        android:id="@+id/user_Info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Age"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="230dp"
        />



    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_marginTop="400dp"
        android:layout_marginStart="160dp"
        />





</RelativeLayout>
