<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbg"
    tools:context=".MainActivity">

    <!-- First LinearLayout for icons and text -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">




        <ImageView
            android:id="@+id/image_pic"
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="160dp"
            android:src="@drawable/barsearch"
            />

        <TextView
            android:id="@+id/skip_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/skip"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            />


        <ImageButton
            android:id="@+id/image_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/add"
            android:layout_marginStart="-160dp"
            android:layout_marginTop="300dp"
            android:background="@drawable/circle"
            android:backgroundTint="@color/white"
            android:src="@drawable/baseline_add_24"
            />


        <Button
            android:id="@+id/uploadButton"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/upload_image"
            android:layout_marginStart="-164dp"
            android:layout_marginTop="390dp"
            android:contentDescription="@string/selectimage"
            />



    </LinearLayout>








</RelativeLayout>
