<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbg">

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="390dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="ExtraText">


        <!-- Title (Login) -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:text="@string/enter_code"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <!-- Username Field -->
        <EditText
            android:id="@+id/code_Input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/roundcorner"
            android:hint="@string/code"
            android:inputType="text|number"
        android:maxLength="4"
        android:padding="13dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp" />



        <Button
            android:id="@+id/submit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/white"
            android:padding="12dp"
            android:text="@string/submit"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>
