<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbg"
    tools:context=".MainActivity">

    <!-- First LinearLayout for icons and text -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/youtube" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/youtube"
            android:layout_marginStart="5dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textColor="@color/white" />

        <ImageView
            android:layout_width="23dp"
            android:layout_height="40dp"
            android:layout_marginStart="170dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/bell" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/searchbar" />
    </LinearLayout>

    <!-- Second LinearLayout for centered image -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="100dp">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/barsearch" />
    </LinearLayout>

    <!-- Third LinearLayout for centered login text -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="200dp"
        android:layout_marginStart="130dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_or_signup"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="237dp"> <!-- Adjust margin to position the button -->

        <Button
            android:id="@+id/sign_Up_Btn"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:text="@string/login_now"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
             />
    </LinearLayout>

</RelativeLayout>
